# rclpy_package_template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name | snakecase }}/: .pre-commit-config.yaml  README.md  package.xml  pyproject.toml  setup.cfg  setup.py  {{ cookiecutter.project_name | snakecase }}.repos
{{ cookiecutter.project_name | snakecase }}/.github/workflows/: build_and_test.yaml
{{ cookiecutter.project_name | snakecase }}/doc/: developer.md  installation.md  user.md
