<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>{{ cookiecutter.project_name | snakecase }}</name>
    <version>0.0.0</version>
    <description>{{ cookiecutter.project_short_description }}</description>

    <maintainer email="{{ cookiecutter.author_email }}">{{ cookiecutter.author }}</maintainer>
    <author email="{{ cookiecutter.author_email }}">{{ cookiecutter.author }}</author>

    <license>BSD</license>

    <url type="website">https://github.com/JafarAbdi/{{ cookiecutter.project_name | snakecase }}</url>
    <url type="bugtracker">https://github.com/JafarAbdi/{{ cookiecutter.project_name | snakecase }}/issues</url>
    <url type="repository">https://github.com/JafarAbdi/{{ cookiecutter.project_name | snakecase }}/</url>

    <depend>rclpy</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
      <build_type>ament_python</build_type>
    </export>
</package>
